add complaints module